# math-tools

./: .gitignore  README.md  pyproject.toml
math_tools/common/: equation.py
math_tools/solution_generator/probability/: addition_rule.py  lib.py  simple_probability.py
math_tools/solution_generator/statistics/: __init__.py  correlation.py  covariance.py  grouped_data_mean.py  grouped_data_sd.py  grouped_data_variance.py  lib.py  mean.py  standard_deviation.py  variance.py  weighted_mean.py
math_tools/solution_generator/statistics/lib/: covariance.py  mean.py  standard_deviation.py  variance.py
math_tools/tools/: latex.py
