[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-tools"  # pip install name
version = "0.1.0"
description = "A collection of extended math tools for everyday math needs."
authors = [{ name = "Angelito Casasis", email = "angelito.casasis@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
	"matplotlib>=3.10.5",
	"numpy>=2.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
